# sdl

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
include/build_config/: SDL_build_config_windows.h
src/dynapi/: SDL_dynapi.h
src/test/: BUILD.bazel
test/: BUILD.bazel
